# argus

AIProjects/: README.md
AIProjects/front-filter/: .gitignore
AIProjects/graffiti/: argus.go  evals.go
AIProjects/mix/: recognize.go  service.go
AIProjects/ras-tool/: README.md
AIProjects/structure_vcs/: CMakeLists.txt  README.md
AIProjects/structure_vcs/cmake/: Dependencies.cmake  ProtoBuf.cmake  Utils.cmake
AIProjects/structure_vcs/cmake/modules/: FindGTest.cmake  FindProtobuf.cmake  FindRapidJSON.cmake
AIProjects/structure_vcs/config/: models.list  vcs_demo_add.json  vcs_demo_init.json
AIProjects/structure_vcs/docker/: Dockerfile
AIProjects/structure_vcs/scripts/: build.sh
AIProjects/structure_vcs/scripts/jenkinsfile/: ai-structure-vcs-lib-image-build.groovy
AIProjects/structure_vcs/src/: CMakeLists.txt
AIProjects/structure_vcs/src/common/: CMakeLists.txt  Queue.h  log.hpp
AIProjects/structure_vcs/src/core/: callback.cpp  vcs.cpp
AIProjects/structure_vcs/src/examples/: CMakeLists.txt  vcs_demo.cpp
AIProjects/structure_vcs/src/include/: callback.hpp  util.hpp  vcs.hpp  vss.hpp
AIProjects/structure_vcs/src/include/restclient-cpp/: connection.h  helpers.h  restclient.h  version.h
AIProjects/structure_vcs/src/mock/: CMakeLists.txt  vss.cpp
AIProjects/structure_vcs/src/proto/: CMakeLists.txt  inference.proto
AIProjects/structure_vcs/src/test/: CMakeLists.txt  test_core.cpp  test_util.cpp
AIProjects/structure_vcs/src/util/: CMakeLists.txt  util.cpp
AIProjects/structure_vcs/src/util/restclient-cpp/: CMakeLists.txt  connection.cc  helpers.cc  restclient.cc
AIProjects/structure_vcs/tools/image_callback_server/: README.md  nginx.conf
AIProjects/structure_vcs/tools/image_callback_server/docker/: Dockerfile
AIProjects/structure_vcs/tools/image_callback_server/lua_scripts/: upload.lua
AIProjects/tianyan/: README.md
argus/: .golangci.yml  .travis.yml  Makefile  README.md
argus/atserving/: README.md
argus/cap/: service_admin.go  service_admin_test.go  service_auditor.go  service_job.go  service_result.go  service_result_test.go  service_sand.go  service_test.go
argus/censor/: image.go  (+3 more)
ataraxia/: .travis.yml  Makefile  README.md  env.sh
ataraxia/ai-sdk/cpp/: .gitignore  CMakeLists.txt  README.md  design.txt
ataraxia/ai-sdk/cpp/cmake/: cppzmq-download.cmake  rapidjson-download.cmake  shadow.cmake  utils.cmake
ataraxia/ai-sdk/cpp/cmake/modules/: Findcppzmq.cmake  Findrapidjson.cmake  Findshadow.cmake
ataraxia/ai-sdk/cpp/src/app/face_detect/: CMakeLists.txt  const.hpp  cpu.dockerfile  infer.cpp  infer.hpp  inference.cpp  inference.hpp  inference_fd.cpp  inference_fd.hpp  inference_qa.cpp  inference_qa.hpp  info.json  models.prototxt  network_shadow.cpp  network_shadow.hpp  platform_shadow.cc  platform_shadow.hpp  template.Dockerfile  test.py
ataraxia/ai-sdk/cpp/src/app/face_feature/: CMakeLists.txt  cpu.dockerfile  eval.py  face.hpp  infer.cpp  infer.hpp  inference.cpp  inference.hpp  info.json  info.v5.json  models.prototxt  models.v5.prototxt  run.Dockerfile  template.Dockerfile  test.py  test_tron.cpp
ataraxia/ai-sdk/cpp/src/app/face_feature/feature/: inference_feature.cpp  inference_feature.hpp
ataraxia/ai-sdk/cpp/src/app/face_feature/mtcnn/: inference_mtcnn.cpp  inference_mtcnn.hpp
ataraxia/ai-sdk/cpp/src/app/face_search/: CMakeLists.txt  infer.cpp  infer.hpp  info.json  template.Dockerfile  test.py
ataraxia/ai-sdk/cpp/src/app/foo/: CMakeLists.txt  forward.cpp  forward.hpp  forward.pb.cc  forward.pb.h  forward.proto  infer.cpp  infer.hpp  inference.cpp  inference.hpp  template.Dockerfile  test_tron.cpp
ataraxia/ai-sdk/cpp/src/app/huanyuanka/: CMakeLists.txt  MixPluginFactory.hpp  face_alignment.hpp  helper.hpp  infer.cpp  inference.cc  inference.hpp  inference_ff.cc  inference_ff.hpp  inference_fo.cc  inference_fo.hpp  inference_mix.cc  inference_mix.hpp  info.json  models.prototxt  platform_tensorrt.cc  platform_tensorrt.hpp  template.Dockerfile
ataraxia/ai-sdk/cpp/src/app/terror_mixup/: CMakeLists.txt  debug_print.hpp  forward.hpp  forward.pb.cc  forward.pb.h  forward.proto  infer.cpp  infer.hpp  inference.hpp  main_test.cpp  post_process.cpp  post_process.hpp  post_process_test.cpp  pre_process.cpp  pre_process.hpp  pre_process_test.cpp  process.cpp  process.hpp  process_test.cpp  template.Dockerfile  utils.cpp  utils.hpp  utils_test.cpp
ataraxia/ai-sdk/cpp/src/app/wa_20181207/: CMakeLists.txt  docker.build  eval.py  forward.cpp  forward.hpp  forward.pb.cc  forward.pb.h  forward.proto  infer.cpp  infer.hpp  inference.cpp  inference.hpp  info.json  net.hpp  template.Dockerfile  test.py  test_tron.cpp
ataraxia/ai-sdk/cpp/src/common/: CMakeLists.txt  archiver.cpp  archiver.hpp  boxes.cpp  boxes.hpp  errors.hpp  image.hpp  infer.hpp  json.hpp  md5.cpp  md5.hpp  protobuf.hpp  time.hpp  type.hpp
ataraxia/ai-sdk/cpp/src/framework/: CMakeLists.txt  base.hpp  context.hpp  example_main.cpp  example_test.cpp  forward.hpp  pp.hpp  zhelpers.hpp
ataraxia/ai-sdk/cpp/src/proto/: CMakeLists.txt  inference.pb.cc  inference.pb.h
ataraxia/inference/face/face-det-all-rip/tron/tron/: CMakeLists.txt
ataraxia/inference/face/face-det-all-rip/tron/tron/common/: helper.hpp  md5.cpp
ataraxia/inference/face/face-det-all-rip/tron/tron/examples/: test_tron.cpp
ataraxia/inference/face/face-det-all-rip/tron/tron/serving/: infer_algorithm.cpp  infer_implement.cpp  infer_implement.hpp
ataraxia/inference/face/face-det/tensorrt/: CMakeLists.txt  README.md
ataraxia/inference/face/face-det/tensorrt/cmake/modules/: FindTensorRT.cmake  Findmix.cmake
ataraxia/inference/face/face-det/tensorrt/docker/: Dockerfile
ataraxia/inference/face/face-det/tensorrt/scripts/: build_docker.sh  build_shell.sh
ataraxia/inference/face/face-det/tensorrt/tron/common/: boxes.cpp  helper.hpp  json.hpp  type.hpp
ataraxia/inference/face/face-det/tensorrt/tron/examples/: test_tron.cpp
ataraxia/inference/face/face-det/tensorrt/tron/serving/: CMakeLists.txt  infer_algorithm.cpp
ataraxia/inference/face/face-det/tron/tron/proto/: CMakeLists.txt
(+2731 files in other folders)
