set(structure_vcs_src)

add_subdirectory(common)
add_subdirectory(util)
add_subdirectory(proto)
add_subdirectory(core)
if (USE_MOCK_VSS)
    add_subdirectory(mock)
endif (USE_MOCK_VSS)
add_subdirectory(test)
add_subdirectory(examples)

include_directories(".")
include_directories("include")

add_library(structure_vcs SHARED ${structure_vcs_src})
message(STATUS ${structure_vcs_LINKER_LIBS})
target_link_libraries(structure_vcs restclient-cpp)
target_link_libraries(structure_vcs ${structure_vcs_LINKER_LIBS})
target_link_libraries(structure_vcs ${structure_vcs_PROTO_LIB})
if (NOT USE_MOCK_VSS)
    target_link_libraries(structure_vcs vss)
endif (NOT USE_MOCK_VSS)
install(TARGETS structure_vcs DESTINATION ${structure_vcs_INSTALL_LIB_PREFIX})

foreach (structure_vcs_example_src ${structure_vcs_examples_src})
  get_filename_component(structure_vcs_example_fil_we ${structure_vcs_example_src} NAME_WE)
  add_executable(${structure_vcs_example_fil_we} ${structure_vcs_example_src})
  target_link_libraries(${structure_vcs_example_fil_we} restclient-cpp)
  target_link_libraries(${structure_vcs_example_fil_we} structure_vcs)
  if (NOT USE_MOCK_VSS)
      target_link_libraries(${structure_vcs_example_fil_we} vss)
  endif (NOT USE_MOCK_VSS)
  install(TARGETS ${structure_vcs_example_fil_we} DESTINATION ${structure_vcs_INSTALL_BIN_PREFIX})
endforeach ()